Userview overlapping fix.

--- a/src/app/diagram/userview/userview.component.scss
+++ b/src/app/diagram/userview/userview.component.scss
@@ -1,4 +1,8 @@
 .card {
   max-height: 78vh;
   overflow: auto;
+
+  .card-body {
+    min-height: unset;
+  }
 }
